--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,8 +6,8 @@
     body {
       font-family: "Helvetica Neue", Arial, sans-serif;
       background-color: #f1f1f1;
-      align-items: center; /* Center content vertically */
-      justify-content: center; /* Center content horizontally */
+      align-items: center; 
+      justify-content: center; 
       height: 100vh;
     }
 
