--- a/views/user2.hbs
+++ b/views/user2.hbs
@@ -6,9 +6,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+
     <title>Utilisateur</title>
 
     <!-- Custom fonts for this template-->
+
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
@@ -26,7 +28,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
                 
                 <div class="sidebar-brand-text mx-3">Utilisateur</div><br>
             </a>
@@ -180,6 +182,16 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
+                {{#if message}}
+                    <div class="centered-message">
+                        <h4 class="btn btn-danger btn-icon-split">
+                            <span class="icon text-white-50">
+                                <i class="fas fa-exclamation-triangle"></i>
+                            </span>
+                            <span class="text">{{message}}</span>
+                        </h4>
+                    </div>
+             {{/if}}
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-4 text-gray-800">Liste des demandes</h1>
@@ -232,6 +244,7 @@
                                     <h1 class="h4 text-gray-900 mb-4">Créer une demande de stage:</h1>
                                 </div>
                                 <form class="user" action="/user" method="POST" id="Formulaire" >
+                                     <input type="hidden" name="_csrf" value="{{csrfToken}}">
                                     <div class="form-group row">
                                         <div class="col-sm-6 mb-3 mb-sm-0">
                                             
@@ -374,6 +387,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
+
     <script>
         function toggleAssuranceCompagnieInput(showInput) {
         var assuranceCompagnieGroup = document.getElementById("assurance_compagnie_group");
